# metadata-publisher-demo

./: .gitignore  CMakeLists.txt  README.md
Cmake/: copy_dll_windows.cmake
install/: CMakeLists.txt  LICENSE.rtf  LICENSE.txt  sign_and_notarize_MACRO.cmake
millicast-native-sdk-1.5.0-Windows/: LICENSE.txt
millicast-native-sdk-1.5.0-Windows/examples/: CMakeLists.txt  README.md
millicast-native-sdk-1.5.0-Windows/examples/publisher-app/: main.cpp
millicast-native-sdk-1.5.0-Windows/examples/subscriber-app/: main.cpp
millicast-native-sdk-1.5.0-Windows/include/millicast-sdk/: capabilities.h  client.h  exports.h  frames.h  mc_logging.h  media.h  publisher.h  renderer.h  source.h  stats.h  track.h  viewer.h
millicast-native-sdk-1.5.0-Windows/lib/: MillicastSDK.lib  libcurl.lib
millicast-native-sdk-1.5.0-Windows/lib/cmake/: MillicastSDKConfig.cmake  MillicastSDKTargets-release.cmake  MillicastSDKTargets.cmake
millicast-native-sdk-1.5.0-Windows/lib/cmake/CURL/: CURLConfig.cmake  CURLConfigVersion.cmake  CURLTargets-release.cmake  CURLTargets.cmake
millicast-native-sdk-1.5.0-Windows/lib/pkgconfig/: libcurl.pc
packaging/: CMakeLists.txt  WIX.template.in
src/: CMakeLists.txt  main.cpp
src/mac/: Info.plist
